results page added

--- a/index.html
+++ b/index.html
@@ -31,7 +31,18 @@
         </div>
     </main>
     <section id="colleges">
-        
+        <div class="box">
+            <a href="results">Dhaka College</a>
+        </div>
+        <div class="box">
+            <a href="results">Rajshahi College</a>
+        </div>
+        <div class="box">
+            <a href="results">Chittagong College</a>
+        </div>
+        <div class="box">
+            <a href="results">Chittagong City College</a>
+        </div>
     </section>
 </body>
 </html>
