--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
     </main>
     <section id="colleges">
         <div class="box">
-            <a href="results">Dhaka College</a>
+            <a href="results.html">Dhaka College</a>
         </div>
         <div class="box">
-            <a href="results">Rajshahi College</a>
+            <a href="results.html">Rajshahi College</a>
         </div>
         <div class="box">
-            <a href="results">Chittagong College</a>
+            <a href="results.html">Chittagong College</a>
         </div>
         <div class="box">
-            <a href="results">Chittagong City College</a>
+            <a href="results.html">Chittagong City College</a>
         </div>
     </section>
 </body>
