--- a/results.html
+++ b/results.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- custom css -->
-    <link rel="stylesheet" href="index.css">
-    <!-- ===== IONICONS ===== -->
-    <script src="https://unpkg.com/ionicons@5.1.2/dist/ionicons.js"></script>
-    <title>ShowResults</title>
+    <link rel="stylesheet" href="css/index.css">
     <!-- custom script -->
-    <script src="index.js" defer></script>
+    <script src="js/index.js" defer></script>
+
+    <title>ShowResults</title>
 
 </head>
 <body>
@@ -28,7 +28,7 @@
                 </div>
                 <div class="nav__list">
                     <a href="/" class="nav__link active">
-                        <ion-icon name="home-outline" class="nav__icon"></ion-icon>
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
                         <span class="nav__name">Main</span>
                     </a>
 
@@ -51,7 +51,7 @@
 
                         <ul class="collapse__menu">
                             <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="#" class="collapse__sublink">Final HSC-2021</a>
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final" class="collapse__sublink">Final HSC-2021</a>
                         </ul>
                     </div>
                     <div  class="nav__link collapse">
@@ -75,17 +75,20 @@
                         </ul>
                     </div>
                     <a href="#" class="nav__link">
-                        <ion-icon name="settings-outline" class="nav__icon"></ion-icon>
+                        <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24" fill="white" width="18px" height="18px"><g><path d="M0,0h24v24H0V0z" fill="none"/><path d="M19.14,12.94c0.04-0.3,0.06-0.61,0.06-0.94c0-0.32-0.02-0.64-0.07-0.94l2.03-1.58c0.18-0.14,0.23-0.41,0.12-0.61 l-1.92-3.32c-0.12-0.22-0.37-0.29-0.59-0.22l-2.39,0.96c-0.5-0.38-1.03-0.7-1.62-0.94L14.4,2.81c-0.04-0.24-0.24-0.41-0.48-0.41 h-3.84c-0.24,0-0.43,0.17-0.47,0.41L9.25,5.35C8.66,5.59,8.12,5.92,7.63,6.29L5.24,5.33c-0.22-0.08-0.47,0-0.59,0.22L2.74,8.87 C2.62,9.08,2.66,9.34,2.86,9.48l2.03,1.58C4.84,11.36,4.8,11.69,4.8,12s0.02,0.64,0.07,0.94l-2.03,1.58 c-0.18,0.14-0.23,0.41-0.12,0.61l1.92,3.32c0.12,0.22,0.37,0.29,0.59,0.22l2.39-0.96c0.5,0.38,1.03,0.7,1.62,0.94l0.36,2.54 c0.05,0.24,0.24,0.41,0.48,0.41h3.84c0.24,0,0.44-0.17,0.47-0.41l0.36-2.54c0.59-0.24,1.13-0.56,1.62-0.94l2.39,0.96 c0.22,0.08,0.47,0,0.59-0.22l1.92-3.32c0.12-0.22,0.07-0.47-0.12-0.61L19.14,12.94z M12,15.6c-1.98,0-3.6-1.62-3.6-3.6 s1.62-3.6,3.6-3.6s3.6,1.62,3.6,3.6S13.98,15.6,12,15.6z"/></g></svg>
                         <span class="nav__name">Settings</span>
                     </a>
                 </div>
             </div>
 
             <a href="#" class="nav__link">
-                <ion-icon name="log-out-outline" class="nav__icon"></ion-icon>
+                <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24" fill="white" width="18px" height="18px"><g><rect fill="none" height="24" width="24"/></g><g><path d="M11,7L9.6,8.4l2.6,2.6H2v2h10.2l-2.6,2.6L11,17l5-5L11,7z M20,19h-8v2h8c1.1,0,2-0.9,2-2V5c0-1.1-0.9-2-2-2h-8v2h8V19z"/></g></svg>
                 <span class="nav__name">Log Out</span>
             </a>
         </nav>
     </div>
+    <section class="main">
+
+    </section>
 </body>
 </html>
