--- a/results.html
+++ b/results.html
@@ -6,6 +6,10 @@
 
     <!-- custom css -->
     <link rel="stylesheet" href="css/index.css">
+    <!-- chartjs css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css" integrity="sha512-/zs32ZEJh+/EO2N1b0PEdoA10JkdC3zJ8L5FTiQu82LR9S/rOQNfQN7U59U9BC12swNeRAz3HSzIL2vpp4fv3w==" crossorigin="anonymous" />
+    <!-- chartjs js -->
+    <script defer src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg==" crossorigin="anonymous"></script>
     <!-- custom script -->
     <script src="js/index.js" defer></script>
 
@@ -28,7 +32,7 @@
                 </div>
                 <div class="nav__list">
                     <a href="/" class="nav__link active">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+                        <span class="nav__icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="18px" height="18px"><path d="M0 0h24v24H0z" fill="none"/><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg></span>
                         <span class="nav__name">Main</span>
                     </a>
 
@@ -87,8 +91,24 @@
             </a>
         </nav>
     </div>
-    <section class="main">
-
+    <section id="main-container">
+        <div class="chart-1 chart">
+            <p>Mark Overview</p>
+            <canvas id="subjects_mark_overview"></canvas>
+        </div>
+        <div class="chart-2 chart">
+            <p>Search</p>
+            <div class="form__group field">
+                <input type="input" class="form__field" placeholder="3-digit Roll" name="roll" id='std_roll'/>
+                <label for="std_roll" class="form__label">3-digit Roll</label>
+            </div>
+            <div class="form__group field">
+                <input type="input" class="form__field" placeholder="(or) Name" name="name" id='std_name'/>
+              <label for="std_name" class="form__label">(or) Name</label>
+            </div>
+            <button id="submit_btn">Go</button>
+            <canvas id="whole_result"></canvas>
+        </div>
     </section>
 </body>
 </html>
