--- a/results.html
+++ b/results.html
@@ -169,16 +169,16 @@
                 <div class="header">
                     <p>Result</p>
                     <select id="pass_fail_select">
-                        <option value="0">Promoted</option>
-                        <option value="1" selected>Failed</option>
-                        <option value="2">A+</option>
-                        <option value="3">A</option>
-                        <option value="4">A-</option>
-                        <option value="5">B</option>
-                        <option value="6">C</option>
-                        <option value="7">D</option>
-                        <option value="8">F</option>
-                        <option value="9">No Result</option>
+                        <option value="promoted">Promoted</option>
+                        <option value="failed" selected>Failed</option>
+                        <option value="a_plus">A plus</option>
+                        <option value="a">A</option>
+                        <option value="a_minus">A minus</option>
+                        <option value="b">B</option>
+                        <option value="c">C</option>
+                        <option value="d">D</option>
+                        <option value="f">F</option>
+                        <option value="no_result">No Result</option>
                     </select>
                 </div>
                 <div class="canvas">
@@ -186,9 +186,9 @@
                 </div>
                 <div class="footer">
                     <span>
-                        <input type="checkbox" id="toggle" />
-                        <label for="toggle" class="toggleWrapper">
-                            <div class="toggle"></div>
+                        <label class="switch">
+                            <input type="checkbox" id="subjects_pass_fail_overview_checkbox">
+                            <span></span>
                         </label>
                     </span>
                     <span>Change Axis</span>
@@ -204,6 +204,9 @@
                     <label for="std_name">Name</label>
                 </div>
             </div>
+        </div>
+        <div class="row">
+
         </div>
     </section>
 </body>
