code working fine. moving to add new rows

--- a/results.html
+++ b/results.html
@@ -206,7 +206,14 @@
             </div>
         </div>
         <div class="row">
-
+            <div class="card">
+                <div class="header">
+                    <p>Promoted vs Failed</p>
+                </div>
+                <div class="canvas">
+                    <canvas id="total_pass_fail"></canvas>
+                </div>
+            </div>
         </div>
     </section>
 </body>
