--- a/results.html
+++ b/results.html
@@ -56,7 +56,7 @@
                                 <path d="M0 0h24v24H0z" fill="none" />
                                 <path
                                     d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z" />
-                                </svg></span>
+                            </svg></span>
                         <span class="nav__name">Dhaka College</span>
 
                         <span class="collapse__link"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
@@ -75,7 +75,7 @@
                                 <path d="M0 0h24v24H0z" fill="none" />
                                 <path
                                     d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z" />
-                                </svg></span>
+                            </svg></span>
                         <span class="nav__name">Rajshahi College</span>
 
                         <span class="collapse__link"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
@@ -95,7 +95,7 @@
                                 <path d="M0 0h24v24H0z" fill="none" />
                                 <path
                                     d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z" />
-                                </svg></span>
+                            </svg></span>
                         <span class="nav__name">Chittagonj College</span>
 
                         <span class="collapse__link"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
@@ -113,7 +113,7 @@
                                 <path d="M0 0h24v24H0z" fill="none" />
                                 <path
                                     d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-5 14H7v-2h7v2zm3-4H7v-2h10v2zm0-4H7V7h10v2z" />
-                                </svg></span>
+                            </svg></span>
                         <span class="nav__name">Chittagonj City College</span>
 
                         <span class="collapse__link"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"
@@ -155,69 +155,113 @@
         </nav>
     </div>
     <section id="main-container">
-        <div class="row">
-            <div class="card__1 card" id="grade_overview">
-                <div class="header">
-                    <p>Grade Overview</p>
-                </div>
-                <div class="canvas">
-                    <canvas id="subjects_grade_overview"></canvas>
-                </div>
-                <div class="footer"></div>
+
+        <div class="card__1 card" id="grade_overview">
+            <div class="header">
+                <p>Grade Overview</p>
+                <button class="bubbly-button hover-expand v-s">Mark Overview</button>
+                <select id="change_graph_select">
+                    <option value="null" selected disabled>Change Graph Style</option>
+                    <option value="line">Line</option>
+                    <option value="stack">Stack</option>
+                    <option value="bar">Bar</option>
+                </select>
             </div>
-            <div class="card__1 card" id="pass_fail_overview">
-                <div class="header">
-                    <p>Result</p>
-                    <select id="pass_fail_select">
-                        <option value="promoted">Promoted</option>
-                        <option value="failed" selected>Failed</option>
-                        <option value="a_plus">A plus</option>
-                        <option value="a">A</option>
-                        <option value="a_minus">A minus</option>
-                        <option value="b">B</option>
-                        <option value="c">C</option>
-                        <option value="d">D</option>
-                        <option value="f">F</option>
-                        <option value="no_res">No Result</option>
-                    </select>
-                </div>
-                <div class="canvas">
-                    <canvas id="subjects_pass_fail_overview"></canvas>
-                </div>
-                <div class="footer">
-                    <span>
-                        <label class="switch">
-                            <input type="checkbox" id="subjects_pass_fail_overview_checkbox">
-                            <span></span>
-                        </label>
-                    </span>
-                    <span>Change Axis</span>
-                </div>
+            <div class="canvas">
+                <canvas id="subjects_grade_overview"></canvas>
             </div>
-            <div id="search" class="card card__1">
-                <div>
-                    <input class="gate" id="std_roll" type="text" placeholder="3 digit ROLL number" />
-                    <label for="std_roll">Roll</label>
-                </div>
-                <div class="colg_name">RAJSHAHI COLLEGE</div>
-                <div class="img"><svg id="b21613c9-2bf0-4d37-bef0-3b193d34fc5d" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" width="647.63626" height="632.17383" viewBox="0 0 647.63626 632.17383"><path d="M687.3279,276.08691H512.81813a15.01828,15.01828,0,0,0-15,15v387.85l-2,.61005-42.81006,13.11a8.00676,8.00676,0,0,1-9.98974-5.31L315.678,271.39691a8.00313,8.00313,0,0,1,5.31006-9.99l65.97022-20.2,191.25-58.54,65.96972-20.2a7.98927,7.98927,0,0,1,9.99024,5.3l32.5498,106.32Z" transform="translate(-276.18187 -133.91309)" fill="#f2f2f2"/><path d="M725.408,274.08691l-39.23-128.14a16.99368,16.99368,0,0,0-21.23-11.28l-92.75,28.39L380.95827,221.60693l-92.75,28.4a17.0152,17.0152,0,0,0-11.28028,21.23l134.08008,437.93a17.02661,17.02661,0,0,0,16.26026,12.03,16.78926,16.78926,0,0,0,4.96972-.75l63.58008-19.46,2-.62v-2.09l-2,.61-64.16992,19.65a15.01489,15.01489,0,0,1-18.73-9.95l-134.06983-437.94a14.97935,14.97935,0,0,1,9.94971-18.73l92.75-28.4,191.24024-58.54,92.75-28.4a15.15551,15.15551,0,0,1,4.40966-.66,15.01461,15.01461,0,0,1,14.32032,10.61l39.0498,127.56.62012,2h2.08008Z" transform="translate(-276.18187 -133.91309)" fill="#3f3d56"/><path d="M398.86279,261.73389a9.0157,9.0157,0,0,1-8.61133-6.3667l-12.88037-42.07178a8.99884,8.99884,0,0,1,5.9712-11.24023l175.939-53.86377a9.00867,9.00867,0,0,1,11.24072,5.9707l12.88037,42.07227a9.01029,9.01029,0,0,1-5.9707,11.24072L401.49219,261.33887A8.976,8.976,0,0,1,398.86279,261.73389Z" transform="translate(-276.18187 -133.91309)" fill="#f9a826"/><circle cx="190.15351" cy="24.95465" r="20" fill="#f9a826"/><circle cx="190.15351" cy="24.95465" r="12.66462" fill="#fff"/><path d="M878.81836,716.08691h-338a8.50981,8.50981,0,0,1-8.5-8.5v-405a8.50951,8.50951,0,0,1,8.5-8.5h338a8.50982,8.50982,0,0,1,8.5,8.5v405A8.51013,8.51013,0,0,1,878.81836,716.08691Z" transform="translate(-276.18187 -133.91309)" fill="#e6e6e6"/><path d="M723.31813,274.08691h-210.5a17.02411,17.02411,0,0,0-17,17v407.8l2-.61v-407.19a15.01828,15.01828,0,0,1,15-15H723.93825Zm183.5,0h-394a17.02411,17.02411,0,0,0-17,17v458a17.0241,17.0241,0,0,0,17,17h394a17.0241,17.0241,0,0,0,17-17v-458A17.02411,17.02411,0,0,0,906.81813,274.08691Zm15,475a15.01828,15.01828,0,0,1-15,15h-394a15.01828,15.01828,0,0,1-15-15v-458a15.01828,15.01828,0,0,1,15-15h394a15.01828,15.01828,0,0,1,15,15Z" transform="translate(-276.18187 -133.91309)" fill="#3f3d56"/><path d="M801.81836,318.08691h-184a9.01015,9.01015,0,0,1-9-9v-44a9.01016,9.01016,0,0,1,9-9h184a9.01016,9.01016,0,0,1,9,9v44A9.01015,9.01015,0,0,1,801.81836,318.08691Z" transform="translate(-276.18187 -133.91309)" fill="#f9a826"/><circle cx="433.63626" cy="105.17383" r="20" fill="#f9a826"/><circle cx="433.63626" cy="105.17383" r="12.18187" fill="#fff"/></svg></div>
-                <div>
-                    <input class="gate" id="std_name" type="text" placeholder="Don't remember Roll number?" />
-                    <label for="std_name">Name</label>
-                </div>
+            <div class="footer">
+                <span>
+                    <label class="switch">
+                        <input type="checkbox" id="subjects_grade_overview_checkbox">
+                        <span></span>
+                    </label>
+                </span>
+                <span>Change Axis</span>
             </div>
         </div>
-        <div class="row">
-            <div class="card">
-                <div class="header">
-                    <p>Promoted vs Failed</p>
-                    <p id="total_failed" style="color:#FF4651">Failed &nbsp;</p>
-                </div>
-                <div class="canvas">
-                    <canvas id="total_pass_fail"></canvas>
-                </div>
+        <div class="card__1 card" id="pass_fail_overview">
+            <div class="header">
+                <p>Result</p>
+                <select id="pass_fail_select">
+                    <option value="promoted">Promoted</option>
+                    <option value="failed" selected>Failed</option>
+                    <option value="a_plus">A plus</option>
+                    <option value="a">A</option>
+                    <option value="a_minus">A minus</option>
+                    <option value="b">B</option>
+                    <option value="c">C</option>
+                    <option value="d">D</option>
+                    <option value="f">F</option>
+                    <option value="no_res">No Result</option>
+                </select>
+            </div>
+            <div class="canvas">
+                <canvas id="subjects_pass_fail_overview"></canvas>
+            </div>
+            <div class="footer">
+                <span>
+                    <label class="switch">
+                        <input type="checkbox" id="subjects_pass_fail_overview_checkbox">
+                        <span></span>
+                    </label>
+                </span>
+                <span>Change Axis</span>
             </div>
         </div>
+        <div id="search" class="card card__1">
+            <div>
+                <input class="gate" id="std_roll" type="text" placeholder="3 digit ROLL number" />
+                <label for="std_roll">Roll</label>
+            </div>
+            <div style="text-align: center;">
+                <button class="hover-expand ">Submit</button>
+            </div>
+            <div class="colg_name">RAJSHAHI COLLEGE</div>
+            <div class="img"><svg id="b21613c9-2bf0-4d37-bef0-3b193d34fc5d" data-name="Layer 1"
+                    xmlns="http://www.w3.org/2000/svg" width="647.63626" height="632.17383"
+                    viewBox="0 0 647.63626 632.17383">
+                    <path
+                        d="M687.3279,276.08691H512.81813a15.01828,15.01828,0,0,0-15,15v387.85l-2,.61005-42.81006,13.11a8.00676,8.00676,0,0,1-9.98974-5.31L315.678,271.39691a8.00313,8.00313,0,0,1,5.31006-9.99l65.97022-20.2,191.25-58.54,65.96972-20.2a7.98927,7.98927,0,0,1,9.99024,5.3l32.5498,106.32Z"
+                        transform="translate(-276.18187 -133.91309)" fill="#f2f2f2" />
+                    <path
+                        d="M725.408,274.08691l-39.23-128.14a16.99368,16.99368,0,0,0-21.23-11.28l-92.75,28.39L380.95827,221.60693l-92.75,28.4a17.0152,17.0152,0,0,0-11.28028,21.23l134.08008,437.93a17.02661,17.02661,0,0,0,16.26026,12.03,16.78926,16.78926,0,0,0,4.96972-.75l63.58008-19.46,2-.62v-2.09l-2,.61-64.16992,19.65a15.01489,15.01489,0,0,1-18.73-9.95l-134.06983-437.94a14.97935,14.97935,0,0,1,9.94971-18.73l92.75-28.4,191.24024-58.54,92.75-28.4a15.15551,15.15551,0,0,1,4.40966-.66,15.01461,15.01461,0,0,1,14.32032,10.61l39.0498,127.56.62012,2h2.08008Z"
+                        transform="translate(-276.18187 -133.91309)" fill="#3f3d56" />
+                    <path
+                        d="M398.86279,261.73389a9.0157,9.0157,0,0,1-8.61133-6.3667l-12.88037-42.07178a8.99884,8.99884,0,0,1,5.9712-11.24023l175.939-53.86377a9.00867,9.00867,0,0,1,11.24072,5.9707l12.88037,42.07227a9.01029,9.01029,0,0,1-5.9707,11.24072L401.49219,261.33887A8.976,8.976,0,0,1,398.86279,261.73389Z"
+                        transform="translate(-276.18187 -133.91309)" fill="#f9a826" />
+                    <circle cx="190.15351" cy="24.95465" r="20" fill="#f9a826" />
+                    <circle cx="190.15351" cy="24.95465" r="12.66462" fill="#fff" />
+                    <path
+                        d="M878.81836,716.08691h-338a8.50981,8.50981,0,0,1-8.5-8.5v-405a8.50951,8.50951,0,0,1,8.5-8.5h338a8.50982,8.50982,0,0,1,8.5,8.5v405A8.51013,8.51013,0,0,1,878.81836,716.08691Z"
+                        transform="translate(-276.18187 -133.91309)" fill="#e6e6e6" />
+                    <path
+                        d="M723.31813,274.08691h-210.5a17.02411,17.02411,0,0,0-17,17v407.8l2-.61v-407.19a15.01828,15.01828,0,0,1,15-15H723.93825Zm183.5,0h-394a17.02411,17.02411,0,0,0-17,17v458a17.0241,17.0241,0,0,0,17,17h394a17.0241,17.0241,0,0,0,17-17v-458A17.02411,17.02411,0,0,0,906.81813,274.08691Zm15,475a15.01828,15.01828,0,0,1-15,15h-394a15.01828,15.01828,0,0,1-15-15v-458a15.01828,15.01828,0,0,1,15-15h394a15.01828,15.01828,0,0,1,15,15Z"
+                        transform="translate(-276.18187 -133.91309)" fill="#3f3d56" />
+                    <path
+                        d="M801.81836,318.08691h-184a9.01015,9.01015,0,0,1-9-9v-44a9.01016,9.01016,0,0,1,9-9h184a9.01016,9.01016,0,0,1,9,9v44A9.01015,9.01015,0,0,1,801.81836,318.08691Z"
+                        transform="translate(-276.18187 -133.91309)" fill="#f9a826" />
+                    <circle cx="433.63626" cy="105.17383" r="20" fill="#f9a826" />
+                    <circle cx="433.63626" cy="105.17383" r="12.18187" fill="#fff" /></svg></div>
+            <div>
+                <input class="gate" id="std_name" type="text" placeholder="Don't remember Roll number?" />
+                <label for="std_name">Name</label>
+            </div>
+        </div>
+
+
+        <div class="card" id="total_pass_fail_el">
+            <div class="header">
+                <p>Promoted vs Failed</p>
+                <p id="total_failed" style="color:#FF4651">Failed &nbsp;</p>
+            </div>
+            <div class="canvas">
+                <canvas id="total_pass_fail"></canvas>
+            </div>
+        </div>
+
+        <div class="card" id="extra"></div>
+
     </section>
 </body>
 
