grade overview changing axis completed

--- a/results.html
+++ b/results.html
@@ -193,7 +193,7 @@
                     <option value="c">C</option>
                     <option value="d">D</option>
                     <option value="f">F</option>
-                    <option value="no_res">No Result</option>
+                    <option value="no_result">No Result</option>
                 </select>
             </div>
             <div class="canvas">
