async iddb functions creating

--- a/results.html
+++ b/results.html
@@ -16,6 +16,7 @@
         integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
         crossorigin="anonymous"></script>
     <!-- custom script -->
+    <script src="js/aiddb.js" defer></script>
     <script src="js/index.js" defer></script>
 
     <title>ShowResults</title>
