code good bt layout broken

--- a/results.html
+++ b/results.html
@@ -174,13 +174,14 @@
             <div class="footer">
                 <span>
                     <label class="switch">
-                        <input type="checkbox" id="subjects_grade_overview_checkbox">
+                        <input type="checkbox" id="overview_main_checkbox">
                         <span></span>
                     </label>
                 </span>
                 <span>Change Axis</span>
             </div>
         </div>
+        
         <div class="card__1 card" id="overview_secondary">
             <div class="header">
                 <p>Result</p>
