search by roll added

--- a/results.html
+++ b/results.html
@@ -67,7 +67,7 @@
 
                         <ul class="collapse__menu">
                             <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2&s=1" class="collapse__sublink">Final HSC-2021</a>
+                            <a href="results.html?in=dc&xm=hsc_2021_1st_year_science_final_2&s=1&mr=3" class="collapse__sublink">Final HSC-2021</a>
                         </ul>
                     </div>
                     <div class="nav__link collapse">
@@ -86,7 +86,7 @@
 
                         <ul class="collapse__menu">
                             <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a>
-                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final&s=1"
+                            <a href="results.html?in=rc&xm=hsc_2021_1st_year_science_final&s=1&mr=3"
                                 class="collapse__sublink">Final HSC-2021</a>
                         </ul>
                     </div>
