compare and search functionality bug fixeeeed

--- a/results.html
+++ b/results.html
@@ -219,6 +219,9 @@
             <div style="text-align: center;">
                 <button id="search_result" class="hover-expand ">Submit</button>
             </div>
+            <div style="text-align: center;">
+                <button id="compare_result" class="hover-expand ">Compare</button>
+            </div>
             <div class="colg_name">RAJSHAHI COLLEGE</div>
             <div class="img"><svg id="b21613c9-2bf0-4d37-bef0-3b193d34fc5d" data-name="Layer 1"
                     xmlns="http://www.w3.org/2000/svg" width="647.63626" height="632.17383"
@@ -245,10 +248,10 @@
                         transform="translate(-276.18187 -133.91309)" fill="#f9a826" />
                     <circle cx="433.63626" cy="105.17383" r="20" fill="#f9a826" />
                     <circle cx="433.63626" cy="105.17383" r="12.18187" fill="#fff" /></svg></div>
-            <div>
+            <!-- <div>
                 <input class="gate" id="std_name" type="text" placeholder="Seach by name is currently off" />
                 <label for="std_name">Name</label>
-            </div>
+            </div> -->
         </div>
 
 
