result table bug fixed. moving to add mark_overview

--- a/results.html
+++ b/results.html
@@ -217,7 +217,7 @@
                 <label for="std_roll">Roll</label>
             </div>
             <div style="text-align: center;">
-                <button id="search_result" class="hover-expand ">Submit</button>
+                <button id="search_result" class="hover-expand ">show result</button>
             </div>
             <div style="text-align: center;">
                 <button id="compare_result" class="hover-expand ">Compare</button>
@@ -258,7 +258,7 @@
         <div class="card" id="overview_total">
             <div class="header">
                 <p>Promoted vs Failed</p>
-                <p id="total_failed" style="color:#FF4651">Failed &nbsp;</p>
+                <p id="total_failed" style="color:#FF4651"></p>
             </div>
             <div class="canvas">
                 <canvas id="overview_total_canvas"></canvas>
