graph section of main result overview is completed. 1bug[bar is cropped by the canvas while moving to bar from line]

--- a/results.html
+++ b/results.html
@@ -161,12 +161,6 @@
             <div class="header">
                 <p>Grade Overview</p>
                 <button class="hover-expand v-s">Mark Overview</button>
-                <select id="change_graph_select">
-                    <option value="null" selected disabled>Change Graph Style</option>
-                    <option value="line">Line</option>
-                    <option value="stack">Stack</option>
-                    <option value="bar">Bar</option>
-                </select>
             </div>
             <div class="canvas">
                 <canvas id="overview_main_canvas"></canvas>
@@ -178,7 +172,7 @@
                         <span></span>
                     </label>
                 </span>
-                <span>Change Axis</span>
+                <span class="switch-name">Change Axis</span>
             </div>
         </div>
 
