code modularized in functions. working googd

--- a/results.html
+++ b/results.html
@@ -259,7 +259,15 @@
             </div>
         </div>
 
-        <div class="card" id="extra"></div>
+        <div class="card" id="extra">
+            <div class="header">
+                <p>Failed Students</p>
+            </div>
+            <div class="canvas">
+                <canvas id="overview_total_failed"></canvas>
+            </div>
+        </div>
+        <div class="card" id="e"></div>
 
     </section>
 </body>
