failed students overview added

--- a/results.html
+++ b/results.html
@@ -257,6 +257,7 @@
             <div class="canvas">
                 <canvas id="overview_total_canvas"></canvas>
             </div>
+            <div class="footer"></div>
         </div>
 
         <div class="card" id="extra">
@@ -264,7 +265,7 @@
                 <p>Failed Students</p>
             </div>
             <div class="canvas">
-                <canvas id="overview_total_failed"></canvas>
+                <canvas id="overview_total_failed_canvas"></canvas>
             </div>
         </div>
         <div class="card" id="e"></div>
