friend result comparison list added. code good. TODO: handle event while roll has no result

--- a/results.html
+++ b/results.html
@@ -269,8 +269,8 @@
             </div>
         </div>
         <div class="card" id="e">
-            <p>Toppers</p>
-            <div class="list-toppers">
+            <p>Toppers (1-10)</p>
+            <div class="list-toppers list-1">
                 <div>
                     <b>NAME</b>
                     <b>TOTAL MARK</b>
