main-overview completed and specific roll overview completed

--- a/results.html
+++ b/results.html
@@ -277,6 +277,13 @@
                 </div>
             </div>
         </div>
+        <div style="display: none;" class="card" id="developer">
+            <p>Developer</p>
+            <div style="text-align: center;">
+                MUSH
+            </div>
+            <div></div>
+        </div>
 
     </section>
 </body>
