all functions status green

--- a/results.html
+++ b/results.html
@@ -270,12 +270,8 @@
         </div>
         <div class="card" id="e">
             <p>Toppers (1-10)</p>
-            <div class="list-toppers list-1">
-                <div>
-                    <b>NAME</b>
-                    <b>TOTAL MARK</b>
-                </div>
-            </div>
+            <div class="list-toppers"></div>
+            <div></div>
         </div>
         <div style="display: none;" class="card" id="developer">
             <p>Developer</p>
