ready to upload

--- a/results.html
+++ b/results.html
@@ -19,7 +19,7 @@
     <script src="js/aiddb.js" defer></script>
     <script src="js/index.js" defer></script>
 
-    <title>ShowResults</title>
+    <title>ShowResult</title>
 
 </head>
 
