done: responsive navbar for all devices

--- a/results.html
+++ b/results.html
@@ -32,7 +32,7 @@
                 onclick="search_result(this.parentElement.firstElementChild.value)">Search</button>
         </div>
     </header>
-    <div class="l-navbar" id="navbar">
+    <div id="navbar">
         <nav class="nav">
             <div>
                 <div class="nav__brand">
