fix: all fixed working fine with cc_mideterm

--- a/results.html
+++ b/results.html
@@ -7,9 +7,9 @@
     <meta developer='smmus'>
 
     <!-- custom meta tags thsat provide info wile loading specific dbs -->
-    <meta db=rc data-in="Rajshahi Collage" data-main_roll_digits="3" data-is_rank_given="1">
-    <meta db=dc data-in="Dhaka Collage" data-main_roll_digits="3" data-is_rank_given="1">
-    <meta db=cc data-in="Chittagonj Collage" data-main_roll_digits="3" data-is_rank_given="0">
+    <meta db=rc data-in="Rajshahi College" data-main_roll_digits="3" data-is_rank_given="1">
+    <meta db=dc data-in="Dhaka College" data-main_roll_digits="3" data-is_rank_given="1">
+    <meta db=cc data-in="Chittagonj College" data-main_roll_digits="3" data-is_rank_given="0">
     
     <!-- custom css -->
     <link rel="stylesheet" href="css/index.css">
