gccc result added and code working fine

--- a/results.html
+++ b/results.html
@@ -10,6 +10,7 @@
     <meta db=rc data-in="Rajshahi College" data-main_roll_digits="3" data-is_rank_given="1">
     <meta db=dc data-in="Dhaka College" data-main_roll_digits="3" data-is_rank_given="1">
     <meta db=cc data-in="Chittagonj College" data-main_roll_digits="3" data-is_rank_given="0">
+    <meta db=gccc data-in="Chittagonj City College" data-main_roll_digits="3" data-is_rank_given="1">
     
     <!-- custom css -->
     <link rel="stylesheet" href="css/index.css">
@@ -131,7 +132,7 @@
                                 <path d="M19 9h-4V3H9v6H5l7 7 7-7zM5 18v2h14v-2H5z" /></svg></span>
 
                         <ul class="collapse__menu">
-                            <!-- <a href="#" class="collapse__sublink">Half Yearly HSC-2021</a> -->
+                            <a href="results.html?in=gccc&xm=hsc_2021_1st_year_science_midterm" data-db="gccc" data-xm="hsc_2021_1st_year_science_midterm"  data-is_rank_given=1  class="collapse__sublink">Half Yearly HSC-2021</a>
                             <!-- <a href="#" class="collapse__sublink">Final HSC-2021</a> -->
                         </ul>
                     </div>
